October 5, 2015
* changed “Login” to “Log In” in Log In Modal
* added search button at the navbar
* centered text in log in submit button
* added log in with UP Mail
* change the slick button color
* fixed: slick button must not stop rotating
* fixed: body not inline with the header
* fixed: stop bulletin on hover and autoplay if not

October 6, 2015
* added header carousel (not yet done/final)

October 7, 2015
* altered the contact us portion of the footer (not awesome)
* fixed: remove stats for small screens
* fixed: remove student testimonials for small screens
* changed the header font to Quicksand
* changed navbar hover color
* added org slider at the bottom
* changed navar buttons color

October 9, 2015
* fixed: hide search on small screens
* fixed: make the header texts adaptive to super small screens
* fixed: check border bottom/text for smaller screens

October 12, 2015
* added reminder in modal for large pages
* tried drop down login (failed, naka-comment)
* fixed: make sure that the header image is clickable